--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -67,29 +67,6 @@ textarea {
 }
 
 
-.deadline-calculator-form {
-  margin-top: 1rem;
-}
-
-.deadline-calculator-form label {
-  font-weight: 600;
-  margin-right: 1rem;
-}
-
-.deadline-calculator-results {
-  margin-top: 1rem;
-}
-
-.days {
-  width: 50px;
-}
-
-
-.numeric {
-  text-align: right;
-  width: 50px;
-}
-
 /* responsive layout */
 
 .form-responsive {
